# fct

./: .cvsignore  .gitignore  .gitmodules  AUTHORS  GNUmakefile  LICENSE.md  Makefile.am  README.md  b3s_cl_rexec.sql  b3sq.sql  bbc_demo_queries.vsp  build.sh  cl_prx.sql  complete.sql  complete_cl.sql  complete_ddl.sql  complete_single.sql  complete_svc.sql  configure.ac  demo_queries.vsp  facet.js  facet.sql  facet.vsp  facet_agg.sql  facet_doc.html  facet_svc.sql  facet_test.sql  facet_text.xsl  facet_view.sql  fct_drop_cond.xsl  fct_drop_text.xsl  fct_req.xsl  fct_resp.xsl  fct_set_default.xsl  fct_set_loc.xsl  fct_set_text.xsl  fct_set_view.xsl  fct_sticker.xml  fct_strip_loc.xsl  fct_vsp.xsl  (+15 more)
VirtTripleLoader/: .classpath  .project
conductor/: vad_fct_config.sql  vad_fct_config.vspx
css/: default.css  jquery-ui-1.11.4.min.css  jquery-ui-1.8.20.custom.css  style.css
js/: description.js  facet.js
oat/styles/: rdftabs.css
oat/toolkit/: OpenLayers.js  ajax.js  anchor.js  bootstrap.js  dav.js  dialog.js  ghostdrag.js  json.js  loader.js  map.js  rdf.js  (+5 more)
rdfdesc/: description.sql  description.vsp  fct_no_view_perms.vsp  fct_val_auth.vsp  fct_val_login_status.vsp  settings.vsp  usage.vsp
s/: description.js
sql/: b3sq.sql  cl_prx.sql  complete.sql  complete_cl.sql  complete_ddl.sql  complete_single.sql  complete_svc.sql  description.sql  facet.sql  facet_svc.sql  facet_test.sql  facet_view.sql  fct_drop.sql  fct_endpoints.sql  grants.sql  ns.sql  nsdecl.sql  search.sql  srank.sql  srank23.sql  sum.sql  virt_rdf_label.sql
styles/: default.css
vadpacker/: vadpacker.py
www/: about.html  dlistall.vsp  listall.vsp  nspref.vsp  search.sql  search.vsp  style.css
xslt/: facet_text.xsl  fct_drop_cond.xsl  fct_drop_text.xsl  fct_set_default.xsl  fct_set_loc.xsl  fct_set_text.xsl  fct_set_view.xsl  fct_strip_loc.xsl  fct_vsp.xsl  isparql_describe.xsl
(+2 files in other folders)
